--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @media screen and (max-width: 767px) {
     .main-title, .lead {
       text-align: left !important;
+      
+    }
+    .main-title{
+        font-size: 2.441rem;
     }
   }
